@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<object name="portal_actions">
+ <action-provider name="portal_actions"/>
+ <object name="document_actions">
+  <object name="download_as_epub" meta_type="CMF Action">
+   <property name="title">Download as ePub</property>
+   <property name="url_expr">string:$object_url/epub_view</property>
+   <property
+      name="icon_expr">string:$portal_url/++resource++eea.epub.images/download-epub.png</property>
+   <property name="permissions">
+    <element value="Modify portal content"/>
+   </property>
+   <property name="visible">True</property>
+  </object>
+ </object>
+</object>
