@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
  <description>eea.epub profile</description>
- <version>4.6</version>
+ <version>5.3</version>
  <dependencies>
   <dependency>profile-collective.sendaspdf:default</dependency>
  </dependencies>
