@@ -3,6 +3,8 @@ Changelog
 
 5.3-dev - (unreleased)
 ----------------------
+* Change: Moved EPUB related images and actions from eea.soercontent package
+  [voineali refs #19882]
 
 5.2 - (2014-01-21)
 ------------------
